turtlebot3_ws/log/build_2022-09-05_19-03-01/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 342
    and laser.norte == math.inf and laser.nornordeste == math.inf and laser.nordeste == math.inf
    ^
SyntaxError: invalid syntax

